main: make handling of --no-daemon saner by using G_OPTION_FLAG_REVERSED

https://bugzilla.gnome.org/show_bug.cgi?id=700550